--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -5,7 +5,7 @@ admin_path:
 webhook_url: 
 sections:
 - type: directory
-  path: content/blog
+  path: content/blog/posts
   label: Blog Posts
   create: documents
   match: "*"
